# Neural-Mesh

./: README.md
inferenceflow/: .env  .env.example  Dockerfile  IMPLEMENTATION_README.md  docker-compose.yml  pyproject.toml  requirements.txt
inferenceflow/src/: main.py
inferenceflow/src/api/: gateway.py  routes.py
inferenceflow/src/core/: cache.py  orchestrator.py  router.py  scaler.py
inferenceflow/src/models/: providers.py  request.py  response.py
inferenceflow/src/services/: embedding.py  metrics.py
inferenceflow/src/tests/: test_advanced_integration.py  test_api.py  test_basic.py  test_cache.py  test_multimodal_integration.py  test_providers.py  test_rl_integration.py  test_router.py  test_scaler.py
inferenceflow/src/utils/: config.py  logger.py
